--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -184,4 +184,38 @@ Per rimediare a questo, puoi cancellare qualche vecchio file per fare spazio per
     <string name="micloud_main_sync_on_wifi">Utilizza Wi-Fi</string>
     <string name="micloud_main_data_unsynced">%d non sincronizzato</string>
     <string name="micloud_main_last_sync_time">Ultima sincronizzazione</string>
+    <string name="upgrade_space_gb">GB</string>
+    <string name="upgrade_space_tb">TB</string>
+    <string name="upgrade_space_mibipreyear">"%s Mi Credit all'anno"</string>
+    <string name="get_this_month_gb">Ottieni %s di spazio questo mese</string>
+    <string name="get_first_month_gb">Ottieni %s di spazio</string>
+    <string name="more_activity_in_upgrade_space">Leggi di più su <a href="http://i.mi.com">http://i.mi.com</a></string>
+    <string name="success_upgraded_space">Aggiungi %s</string>
+    <string name="total_space_upgraded_to">Spazio totale:%s</string>
+    <string name="apple_cloud">Apple Cloud Service</string>
+    <string name="google_cloud">Google Drive</string>
+    <string name="microsoft_cloud">Microsoft Cloud Service</string>
+    <string name="apple_cloud_eng">iCloud</string>
+    <string name="google_cloud_eng">Google Drive</string>
+    <string name="microsoft_cloud_eng">One Drive</string>
+    <string name="apple_10gb">20 GB</string>
+    <string name="google_100gb">100 GB</string>
+    <string name="apple_cloud_price">"Circa 72 RMB all'anno"</string>
+    <string name="google_cloud_price">"Circa 143 RMB all'anno"</string>
+    <string name="microsoft_cloud_price">"Circa 80 RMB all'anno"</string>
+    <string name="upgrade_space">Aggiungi spazio</string>
+    <string name="upgrade_space_successful">%s GB aggiunti</string>
+    <string name="upgrade_space_successful_total">%s GB disponibili</string>
+    <string name="free_space_has_received">Hai già aggiunto lo spazio mensile</string>
+    <string name="free_space_receive_fail">Impossibile aumentare</string>
+    <string name="buy_space_sulotion_title">Acquisto spazio di archiviazione</string>
+    <string name="buy_space_sulotion_renew_title">Rinnova abbonamento</string>
+    <string name="buy_space_sulotion_message">Acquista %s GB di spazio aggiuntivo</string>
+    <string name="buy_space_sulotion_renew_message">Valido per %s</string>
+    <string name="buy_space_sulotion_auto_renew">Rinnova automaticaemnte</string>
+    <string name="buy_space_sulotion_not_auto_renew">Non rinnovare automaticamente</string>
+    <string name="cloud_space_upgrade_title">Spazio aggiuntivo per Mi Cloud</string>
+    <string name="cloud_space_upgrade_message">Tocca per aggiungere %s GB al tuo spazio cloud</string>
+    <string name="cloud_space_upgrade_no_quota_info">Impossibile caricare. Attendi un minuto o due poi riprova.</string>
+    <string name="micloud_other_product_price">Confronta prezzi</string>
 </resources>
