--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2847,4 +2847,5 @@ Disabilitare le finestre flottanti?"</string>
     <string name="miracast_disable_dhcp">Disattiva HDCP</string>
     <string name="miracast_enable_dhcp">Attiva HDCP</string>
     <string name="status_bar_toggle_arrangement">Gestione comandi</string>
+	<string name="security_keyguard_category_name">Schermata di blocco</string>
 </resources>
