--- a/Italian/main/BarcodeScanner.apk/res/values-it/strings.xml
+++ b/Italian/main/BarcodeScanner.apk/res/values-it/strings.xml
@@ -76,4 +76,6 @@
     <string name="tips_message">Devi essere connesso ad Internet per verificare se il sito che stai visitando è sicuro</string>
     <string name="tips_title">Connessione Internet</string>
     <string name="not_tips">Non chiedere più</string>
+    <string name="settings">Impostazioni</string>
+    <string name="not_insert_contact">Non inserire il contatto</string>
 </resources>
