--- a/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
@@ -122,6 +122,7 @@
     <string name="pref_camera_flashmode_entry_auto">Auto</string>
     <string name="pref_camera_flashmode_entry_on">Attivato</string>
     <string name="pref_camera_flashmode_entry_off">Disattivato</string>
+    <string name="pref_camera_flashmode_entry_torch">Torcia</string>
     <string name="pref_camera_video_flashmode_default">off</string>
     <string name="pref_camera_whitebalance_default">auto</string>
     <string name="pref_camera_whitebalance_title">Bil.bianco</string>
