--- a/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
+++ b/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
@@ -342,4 +342,6 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="tc_sms_report_get_sms_successs">Formato SMS utilizzo dati aggiornato</string>
     <string name="privacy_declare_dialog_title">Termini e Condizioni</string>
     <string name="privacy_declare_dialog_message">Utilizzando questo servizio accetti i &lt;a href=http://max.oupeng.com/eula.html> Termini e Condizioni&lt;/a> di Opera."</string>
+    <string name="sc_allow_network_dialog_tiltle">Impossibile utilizzare la funzione di risparmio dati</string>
+    <string name="sc_allow_network_dialog_message">Devi consentire a questa applicazione di accedere ad Internet perchè funzioni correttamente.</string>
 </resources>
