--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2742,12 +2742,10 @@ Disabilitare le finestre flottanti?"</string>
     <string name="dialog_title_login">"Accedi all'account Xiaomi"</string>
     <string name="make_sure_cancel_update">Annullare aggiornamento?</string>
     <string name="download_current_rom">"Scarica l'ultima versione di MIUI"</string>
-    <string name="view_install_log">Mostra log errore</string>
     <string name="install_whole_rom">Scarica ROM (standard)</string>
     <string name="apply_update_fail">Aggiornamento di sistema fallito.</string>
-    <string name="mione_update_success_title">Aggiornamento completato</string>
     <string name="now">Riavvia adesso</string>
-    <string name="later">Riavvia dopo</string>
+    <string name="need_reboot_now">"Devi riavviare per completare l'aggiornaemto, aggiorna adesso"</string>
     <string name="welcome">Benvenuto</string>
     <string name="launching_pho">Caricamento informazioni telefono, prego attendere.</string>
     <string name="launching_cit">Avvio Rilevamento Hardware, prego attendere.</string>
@@ -2772,6 +2770,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="recent_location_requests_title">Accesso alla posizione</string>
     <string name="recent_location_requests_summary">Le app seguenti richiedono di vedere le informazioni sulla tua posizione</string>
     <string name="permission_manager">Permessi</string>
+    <string name="security_keyguard_category_name">Blocco schermo</string>
     <string name="security_password_category_name">Password</string>
     <string name="bluetooth_unlock_title">Sblocca tramite dispositivo Bluetooth</string>
     <string name="bluetooth_unlock_turned_off">Disattivato</string>
@@ -2797,9 +2796,7 @@ Disabilitare le finestre flottanti?"</string>
     <string name="power_mgr">Batteria</string>
     <string name="symbols_not_allowed_for_password">La password non può contenere simboli</string>
     <string name="reset_legacy_password_settings_preface_text">Devi ripristinare la tua password della schermata di blocco.</string>
-    <string name="translation_contributors_title">Collaboratori</string>
     <string name="lock_intro_message">Lock_intro_message</string>
-    <string name="wifi_type_approval_title">Approvazione tipologia</string>
     <string name="priority_storage_title">Impostazioni di archiviazione</string>
     <string name="priority_storage_summary">Scegli il percorso predefinito dove salvare i dati</string>
     <string name="priority_storage_settings_summary">Se la scheda SD non viene rilevata,i dati saranno salvati automaticamente nella memoria interna del dispositivo</string>
@@ -2809,13 +2806,17 @@ Disabilitare le finestre flottanti?"</string>
     <string name="free_wifi_user_agreement">Quando utilizzi WiWide per collegarti ad una rete, verrà utilizzato il tuo numero telefonico per verificare la tua identità.</string>
     <string name="free_wifi_user_agreement_allow">OK</string>
     <string name="free_wifi_user_agreement_title">Termini di utilizzo</string>
+    <string name="translation_contributors_title">Collaboratori</string>
     <string name="translation_contributors_summary" />
+    <string name="wifi_type_approval_title">Tipo di approvazione</string>
     <string name="status_sim">Stato SIM</string>
     <string name="status_sim_1">SIM1</string>
     <string name="status_sim_2">SIM2</string>
     <string name="status_summary">Tocca per vedere i dettagli</string>
     <string name="wifi_subnet_mask">Subnet mask</string>
     <string name="experimental_build">(Sperimentale)</string>
+    <string name="wireless_on">Attivata</string>
+    <string name="wireless_off">Disattivata</string>
     <string name="miracast_settings_category">Impostazioni display wireless</string>
     <string name="miracast_display_category">Display</string>
     <string name="miracast_menu_search">Ricerca</string>
@@ -2846,5 +2847,5 @@ Disabilitare le finestre flottanti?"</string>
     <string name="miracast_disable_dhcp">Disattiva HDCP</string>
     <string name="miracast_enable_dhcp">Attiva HDCP</string>
     <string name="status_bar_toggle_arrangement">Gestione comandi</string>
-	<string name="security_keyguard_category_name">Schermata di blocco</string>
+    <string name="security_keyguard_category_name">Schermata di blocco</string>
 </resources>
