--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -6,19 +6,18 @@
     <string name="account_hint_text">Email o numero di telefono</string>
     <string name="phone_num_hint_text">Numero di telefono</string>
     <string name="login">Accedi</string>
+    <string name="login_with_email_or_id"><u>Accedi acon un alatro account</u></string>
+    <string name="email_or_id_hint_text">Email o ID Mi Account</string>
     <string name="verify">Verifica</string>
     <string name="register">Crea un account</string>
     <string name="register_by_email"><u>Registrati tramite email</u></string>
     <string name="next">Avanti</string>
     <string name="prev">Indietro</string>
     <string name="forget_password"><u>Password dimenticata</u></string>
-    <string name="foreign_login"><u>Prefisso internazionale</u></string>
-    <string name="seperator_forget_and_foreign">" | "</string>
     <string name="password">Inserisci una password</string>
     <string name="captcha">Inserisci codice</string>
     <string name="vcode">Inserisci codice di verifica</string>
     <string name="bad_authentication">Autenticazione fallita, nome utente o password errate</string>
-    <string name="int_phone_user_notice">Aggiungi il tuo prefisso internazionale se usi il numero di cellulare per la registrazione.</string>
     <string name="micloud_welcome_skip_login"><u>Salta registrazione</u></string>
     <string name="micloud_account_name">Mi Account</string>
     <string name="micloud_reg_new">Nuova registrazione</string>
